// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a line chart matches a snapshot for a single-line chart 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="__gg_gg"
      id="__gg_test-id"
      style="position: relative; height: 450px;"
    >
      <svg
        height="450"
        width="500"
      >
        <g
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="middle"
          transform="translate(0, 410)"
        >
          <path
            class="domain"
            d="M30.5,0.5H480.5"
            fill="none"
            stroke="none"
          />
          <g
            class="tick"
            opacity="1"
            transform="translate(158.47291578501904,0)"
          >
            <line
              stroke="currentColor"
              style="opacity: 0.08;"
              y2="6"
            />
            <text
              data-testid="__gg_x_tick_label"
              dy="0.71em"
              fill="currentColor"
              style="font-size: 12px; font-family: system-ui, BlinkMacSystemFont, Segoe UI,
                Roboto, Oxygen-Sans, Ubuntu, Cantarell,
                Helvetica Neue, sans-serif;"
              y="9"
            >
              2019
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(286.7974055145024,0)"
          >
            <line
              stroke="currentColor"
              style="opacity: 0.08;"
              y2="6"
            />
            <text
              data-testid="__gg_x_tick_label"
              dy="0.71em"
              fill="currentColor"
              style="font-size: 12px; font-family: system-ui, BlinkMacSystemFont, Segoe UI,
                Roboto, Oxygen-Sans, Ubuntu, Cantarell,
                Helvetica Neue, sans-serif;"
              y="9"
            >
              2020
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(415.47346918845017,0)"
          >
            <line
              stroke="currentColor"
              style="opacity: 0.08;"
              y2="6"
            />
            <text
              data-testid="__gg_x_tick_label"
              dy="0.71em"
              fill="currentColor"
              style="font-size: 12px; font-family: system-ui, BlinkMacSystemFont, Segoe UI,
                Roboto, Oxygen-Sans, Ubuntu, Cantarell,
                Helvetica Neue, sans-serif;"
              y="9"
            >
              2021
            </text>
          </g>
        </g>
        <g
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="middle"
          transform="translate(0, 410)"
        >
          <path
            class="domain"
            d="M30.5,0.5H480.5"
            stroke="none"
          />
          <g
            class="tick"
            opacity="1"
            transform="translate(158.47291578501904,0)"
          >
            <line
              stroke="currentColor"
              style="opacity: 0.08;"
              y2="-400"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="3"
            />
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(286.7974055145024,0)"
          >
            <line
              stroke="currentColor"
              style="opacity: 0.08;"
              y2="-400"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="3"
            />
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(415.47346918845017,0)"
          >
            <line
              stroke="currentColor"
              style="opacity: 0.08;"
              y2="-400"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="3"
            />
          </g>
        </g>
        <g
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="end"
          transform="translate(30, 0)"
        >
          <path
            class="domain"
            d="M0.5,410.5V10.5"
            fill="none"
            stroke="none"
          />
          <g
            class="tick"
            opacity="1"
            transform="translate(0,340.29218156754337)"
          >
            <line
              stroke="currentColor"
              style="opacity: 0.08;"
              x2="-6"
            />
            <text
              data-testid="__gg_y_tick_label"
              dy="0.32em"
              fill="currentColor"
              style="font-size: 12px; font-family: system-ui, BlinkMacSystemFont, Segoe UI,
                Roboto, Oxygen-Sans, Ubuntu, Cantarell,
                Helvetica Neue, sans-serif;"
              x="-9"
            >
              1,000
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,222.79325644506665)"
          >
            <line
              stroke="currentColor"
              style="opacity: 0.08;"
              x2="-6"
            />
            <text
              data-testid="__gg_y_tick_label"
              dy="0.32em"
              fill="currentColor"
              style="font-size: 12px; font-family: system-ui, BlinkMacSystemFont, Segoe UI,
                Roboto, Oxygen-Sans, Ubuntu, Cantarell,
                Helvetica Neue, sans-serif;"
              x="-9"
            >
              1,500
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,105.29433132258994)"
          >
            <line
              stroke="currentColor"
              style="opacity: 0.08;"
              x2="-6"
            />
            <text
              data-testid="__gg_y_tick_label"
              dy="0.32em"
              fill="currentColor"
              style="font-size: 12px; font-family: system-ui, BlinkMacSystemFont, Segoe UI,
                Roboto, Oxygen-Sans, Ubuntu, Cantarell,
                Helvetica Neue, sans-serif;"
              x="-9"
            >
              2,000
            </text>
          </g>
        </g>
        <g
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="end"
          transform="translate(30, 0)"
        >
          <path
            class="domain"
            d="M0.5,410.5V10.5"
            stroke="none"
          />
          <g
            class="tick"
            opacity="1"
            transform="translate(0,340.29218156754337)"
          >
            <line
              stroke="currentColor"
              style="opacity: 0.08;"
              x2="450"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-3"
            />
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,222.79325644506665)"
          >
            <line
              stroke="currentColor"
              style="opacity: 0.08;"
              x2="450"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-3"
            />
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,105.29433132258994)"
          >
            <line
              stroke="currentColor"
              style="opacity: 0.08;"
              x2="450"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-3"
            />
          </g>
        </g>
        <g>
          <path
            clip-path="url(#__gg_canvas_test-id)"
            d="M30,369.117L32.461,366.657L34.922,360.913L37.383,367.053L39.844,375.149L42.305,384.557L44.766,375.221L47.227,370.809L49.688,362.403L52.149,366.087L54.596,362.021L57.057,370.571L59.518,376.282L61.979,375.437L64.44,374.473L66.901,368.2L69.362,385.767L71.823,370.843L74.284,358.38L76.745,357.433L79.206,357.225L81.667,358.219L84.128,350.734L86.589,354.523L89.05,359.374L91.511,362.077L94.323,363.791L96.784,357.384L99.245,356.416L101.706,354.357L104.167,339.398L106.628,337.707L109.089,332.667L111.551,330.204L114.012,319.376L116.473,321.567L118.934,317.81L121.395,325.051L123.856,319.467L126.317,320.031L128.778,335.161L131.239,333.407L133.7,329.183L136.161,326.98L138.636,342.291L141.097,361.338L143.91,382.659L146.371,375.645L148.832,386.897L151.293,390.254L153.754,406.702L156.215,400.569L158.676,410L161.137,405.521L163.598,401.021L166.059,399.979L168.52,390.272L170.981,385.962L173.442,385.951L175.903,383.125L178.364,380.909L180.825,383.192L183.272,368.554L185.733,363.091L188.194,364.31L190.655,361.498L193.116,359.473L196.631,353.643L199.092,353.557L201.553,349.373L204.014,373.982L206.475,376.825L209.288,382.08L211.749,380.556L214.21,364.153L216.671,360.217L219.132,363.331L221.593,358.909L224.054,360.496L226.515,357.025L228.976,353.002L231.437,353.066L233.898,365.577L236.359,352.864L238.82,351.388L241.281,357.973L243.742,356.337L246.203,344.655L248.664,340.407L251.125,343.614L253.586,340.284L256.047,340.483L258.508,329.08L260.969,324.234L263.43,320.757L265.906,306.306L268.367,301.262L270.828,296.741L273.289,298.83L275.75,303.883L278.211,294.455L280.672,281.998L283.133,277.967L285.594,272.197M416.028,56.851L418.489,65.588L420.95,70.479L423.411,10L425.872,42.232L428.333,38.208L430.794,49.333L433.255,78.251L435.716,81.171L438.177,97.09L440.624,79.395L443.085,91.349L445.546,104.633L448.007,79.89L450.468,47.657L452.929,52.792L455.39,47.772L457.851,73.419L460.312,81.027L462.773,85.184L465.234,77.144L467.695,87.419L470.156,77.772L472.617,66.399L475.078,49.38L477.539,40.164L480,17.85"
            data-testid="__gg_geom_line"
            fill="none"
            opacity="0.7"
            stroke="#777777ee"
            stroke-opacity="1"
            stroke-width="1.8"
          />
        </g>
        <g>
          <clippath
            id="__gg_canvas_test-id"
          >
            <rect
              fill="transparent"
              height="404"
              width="454"
              x="28"
              y="8"
            />
          </clippath>
          <rect
            data-testid="__gg_event_area"
            fill="transparent"
            height="402"
            width="454"
            x="28"
            y="8"
          />
        </g>
        <g
          class="__gg-tooltip-test-id"
          style="transform: translateX(99.24541814512192px);"
        >
          <line
            data-testid="__gg_geom_line_marker"
            stroke="#888"
            stroke-dasharray="2"
            stroke-width="1.5"
            style="pointer-events: none;"
            y1="410"
            y2="10"
          />
          <g
            style="pointer-events: none;"
          >
            <circle
              cy="356.41618470153674"
              fill="#777777ee"
              fill-opacity="0.5"
              r="7.5"
            />
            <circle
              cy="356.41618470153674"
              data-testid="__gg_geom_line_marker_point"
              fill="#777777ee"
              fill-opacity="1"
              r="3.5"
              stroke="#fff"
              stroke-opacity="0.7"
              stroke-width="1.09375"
            />
          </g>
        </g>
        <g
          id="__gg-brush-exclusion-test-id"
        />
      </svg>
      <div
        style="position: relative;"
      >
        <div
          data-testid="__gg_zoom_out_button"
          id="__gg-zoom-out-button-test-id"
        />
      </div>
      <div
        style="position: relative;"
      >
        <div
          data-testid="__gg_x_tooltip"
          id="__gg-tooltip-x-test-id"
        />
        <div
          data-testid="__gg_y_tooltip"
          id="__gg-tooltip-y-test-id"
        >
          <div
            style="font-family: system-ui, BlinkMacSystemFont, Segoe UI,
                Roboto, Oxygen-Sans, Ubuntu, Cantarell,
                Helvetica Neue, sans-serif; left: 107.24541814512192px; pointer-events: none; position: absolute; white-space: nowrap; top: -98.58381529846326px;"
          >
            <div
              style="font-size: 12px; padding: 4px 6px 4px 6px; color: rgb(17, 17, 17); background: rgba(254, 254, 254, 0.914); border: 1px solid #eee; border-radius: 2px; box-shadow: rgba(0, 0, 0, 0.5) 0px 1px 4px;"
            >
              <div
                style="margin-top: 2px; margin-bottom: 2px; color: rgb(85, 85, 85);"
              >
                Jul 18, 2018
              </div>
              <div>
                <div
                  style="margin-top: 3px; margin-bottom: 2px; display: flex; align-items: center;"
                >
                  <div
                    style="font-weight: 500; font-size: 13px;"
                  >
                    929.26
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div />
    </div>
  </div>
</DocumentFragment>
`;

exports[`a line chart matches a snapshot with multiple settings 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="__gg_gg"
      id="__gg_test-id"
      style="position: relative; height: 450px;"
    >
      <svg
        height="450"
        width="500"
      >
        <g
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="middle"
          transform="translate(0, 410)"
        >
          <path
            class="domain"
            d="M30.5,0.5H480.5"
            fill="none"
            stroke="none"
          />
          <g
            class="tick"
            opacity="1"
            transform="translate(158.47291578501904,0)"
          >
            <line
              stroke="currentColor"
              style="opacity: 0.08;"
              y2="6"
            />
            <text
              data-testid="__gg_x_tick_label"
              dy="0.71em"
              fill="currentColor"
              style="font-size: 12px; font-family: system-ui, BlinkMacSystemFont, Segoe UI,
                Roboto, Oxygen-Sans, Ubuntu, Cantarell,
                Helvetica Neue, sans-serif;"
              y="9"
            >
              2019
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(286.7974055145024,0)"
          >
            <line
              stroke="currentColor"
              style="opacity: 0.08;"
              y2="6"
            />
            <text
              data-testid="__gg_x_tick_label"
              dy="0.71em"
              fill="currentColor"
              style="font-size: 12px; font-family: system-ui, BlinkMacSystemFont, Segoe UI,
                Roboto, Oxygen-Sans, Ubuntu, Cantarell,
                Helvetica Neue, sans-serif;"
              y="9"
            >
              2020
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(415.47346918845017,0)"
          >
            <line
              stroke="currentColor"
              style="opacity: 0.08;"
              y2="6"
            />
            <text
              data-testid="__gg_x_tick_label"
              dy="0.71em"
              fill="currentColor"
              style="font-size: 12px; font-family: system-ui, BlinkMacSystemFont, Segoe UI,
                Roboto, Oxygen-Sans, Ubuntu, Cantarell,
                Helvetica Neue, sans-serif;"
              y="9"
            >
              2021
            </text>
          </g>
        </g>
        <g
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="middle"
          transform="translate(0, 410)"
        >
          <path
            class="domain"
            d="M30.5,0.5H480.5"
            stroke="none"
          />
          <g
            class="tick"
            opacity="1"
            transform="translate(158.47291578501904,0)"
          >
            <line
              stroke="currentColor"
              style="opacity: 0.08;"
              y2="-400"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="3"
            />
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(286.7974055145024,0)"
          >
            <line
              stroke="currentColor"
              style="opacity: 0.08;"
              y2="-400"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="3"
            />
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(415.47346918845017,0)"
          >
            <line
              stroke="currentColor"
              style="opacity: 0.08;"
              y2="-400"
            />
            <text
              dy="0.71em"
              fill="currentColor"
              y="3"
            />
          </g>
        </g>
        <g
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="end"
          transform="translate(30, 0)"
        >
          <path
            class="domain"
            d="M0.5,410.5V10.5"
            fill="none"
            stroke="none"
          />
          <g
            class="tick"
            opacity="1"
            transform="translate(0,382.926755498008)"
          >
            <line
              stroke="currentColor"
              style="opacity: 0.08;"
              x2="-6"
            />
            <text
              data-testid="__gg_y_tick_label"
              dy="0.32em"
              fill="currentColor"
              style="font-size: 12px; font-family: system-ui, BlinkMacSystemFont, Segoe UI,
                Roboto, Oxygen-Sans, Ubuntu, Cantarell,
                Helvetica Neue, sans-serif;"
              x="-9"
            >
              500
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,285.09395085833603)"
          >
            <line
              stroke="currentColor"
              style="opacity: 0.08;"
              x2="-6"
            />
            <text
              data-testid="__gg_y_tick_label"
              dy="0.32em"
              fill="currentColor"
              style="font-size: 12px; font-family: system-ui, BlinkMacSystemFont, Segoe UI,
                Roboto, Oxygen-Sans, Ubuntu, Cantarell,
                Helvetica Neue, sans-serif;"
              x="-9"
            >
              1,000
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,187.26114621866418)"
          >
            <line
              stroke="currentColor"
              style="opacity: 0.08;"
              x2="-6"
            />
            <text
              data-testid="__gg_y_tick_label"
              dy="0.32em"
              fill="currentColor"
              style="font-size: 12px; font-family: system-ui, BlinkMacSystemFont, Segoe UI,
                Roboto, Oxygen-Sans, Ubuntu, Cantarell,
                Helvetica Neue, sans-serif;"
              x="-9"
            >
              1,500
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,89.42834157899222)"
          >
            <line
              stroke="currentColor"
              style="opacity: 0.08;"
              x2="-6"
            />
            <text
              data-testid="__gg_y_tick_label"
              dy="0.32em"
              fill="currentColor"
              style="font-size: 12px; font-family: system-ui, BlinkMacSystemFont, Segoe UI,
                Roboto, Oxygen-Sans, Ubuntu, Cantarell,
                Helvetica Neue, sans-serif;"
              x="-9"
            >
              2,000
            </text>
          </g>
        </g>
        <g
          fill="none"
          font-family="sans-serif"
          font-size="10"
          text-anchor="end"
          transform="translate(30, 0)"
        >
          <path
            class="domain"
            d="M0.5,410.5V10.5"
            stroke="none"
          />
          <g
            class="tick"
            opacity="1"
            transform="translate(0,382.926755498008)"
          >
            <line
              stroke="currentColor"
              style="opacity: 0.08;"
              x2="450"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-3"
            />
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,285.09395085833603)"
          >
            <line
              stroke="currentColor"
              style="opacity: 0.08;"
              x2="450"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-3"
            />
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,187.26114621866418)"
          >
            <line
              stroke="currentColor"
              style="opacity: 0.08;"
              x2="450"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-3"
            />
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,89.42834157899222)"
          >
            <line
              stroke="currentColor"
              style="opacity: 0.08;"
              x2="450"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              x="-3"
            />
          </g>
        </g>
        <g>
          <path
            clip-path="url(#__gg_canvas_test-id)"
            d="M30,309.011L32.461,306.962L34.922,302.18L37.383,307.292L39.844,314.033L42.305,321.867L44.766,314.093L47.227,310.42L49.688,303.42L52.149,306.488L54.596,303.103L57.057,310.221L59.518,314.977L61.979,314.273L64.44,313.47L66.901,308.247L69.362,322.874L71.823,310.448L74.284,300.071L76.745,299.282L79.206,299.109L81.667,299.936L84.128,293.704L86.589,296.859L89.05,300.898L91.511,303.149L94.323,304.576L96.784,299.241L99.245,298.436L101.706,296.721L104.167,284.266L106.628,282.857L109.089,278.661L111.551,276.611L114.012,267.595L116.473,269.419L118.934,266.291L121.395,272.32L123.856,267.67L126.317,268.141L128.778,280.738L131.239,279.277L133.7,275.76L136.161,273.926L138.636,286.674L141.097,302.533L143.91,320.286L146.371,314.446L148.832,323.815L151.293,326.61L153.754,340.305L156.215,335.198L158.676,343.051L161.137,339.321L163.598,335.575L166.059,334.707L168.52,326.625L170.981,323.036L173.442,323.027L175.903,320.674L178.364,318.829L180.825,320.73L183.272,308.542L185.733,303.993L188.194,305.008L190.655,302.667L193.116,300.981L196.631,296.127L199.092,296.055L201.553,292.571L204.014,313.061L206.475,315.429L209.288,319.804L211.749,318.535L214.21,304.878L216.671,301.601L219.132,304.193L221.593,300.511L224.054,301.832L226.515,298.942L228.976,295.593L231.437,295.646L233.898,306.063L236.359,295.478L238.82,294.249L241.281,299.731L243.742,298.37L246.203,288.643L248.664,285.106L251.125,287.776L253.586,285.004L256.047,285.169L258.508,275.675L260.969,271.64L263.43,268.745L265.906,256.712L268.367,252.513L270.828,248.749L273.289,250.487L275.75,254.695L278.211,246.845L280.672,236.473L283.133,233.117L285.594,228.312M416.028,49.009L418.489,56.284L420.95,60.357L423.411,10L425.872,36.837L428.333,33.487L430.794,42.75L433.255,66.828L435.716,69.259L438.177,82.513L440.624,67.781L443.085,77.734L445.546,88.794L448.007,68.192L450.468,41.354L452.929,45.629L455.39,41.45L457.851,62.804L460.312,69.139L462.773,72.6L465.234,65.906L467.695,74.461L470.156,66.429L472.617,56.96L475.078,42.789L477.539,35.115L480,16.536"
            data-testid="__gg_geom_line"
            fill="none"
            opacity="0.7"
            stroke="#4e79a7"
            stroke-dasharray="0"
            stroke-opacity="1"
            stroke-width="1.8"
            style="pointer-events: none;"
          />
          <path
            clip-path="url(#__gg_canvas_test-id)"
            d="M30,366.219L32.461,361.472L34.922,357.62L37.383,351.672L39.844,342.827L42.305,346.058L44.766,342.812L47.227,339.647L49.688,336.847L52.149,333.761L54.596,329.399L57.057,330.266L59.518,344.531L61.979,346.4L64.44,344.844L66.901,335.203L69.362,341.628L71.823,331.231L74.284,327.592L76.745,329.56L79.206,328.175L81.667,325.989L84.128,319.261L86.589,318.396L89.05,314.103L91.511,322.607L94.323,318.294L96.784,309.061L99.245,307.24L101.706,307.715L104.167,305.202L106.628,299.076L109.089,300.221L111.551,298.658L114.012,289.164L116.473,293.37L118.934,290.358L121.395,294.707L123.856,288.152L126.317,297.565L128.778,315.75L131.239,310.847L133.7,309.752L136.161,320.911L138.636,312.36L141.097,325.321L143.91,336.551L146.371,318.554L148.832,324.394L151.293,327.955L153.754,348.473L156.215,338.851L158.676,328.909L161.137,322.648L163.598,317.303L166.059,319.699L168.52,323.96L170.981,327.613L173.442,325.717L175.903,323.448L178.364,319.405L180.825,324.305L183.272,315.495L185.733,310.453L188.194,308.813L190.655,303.389L193.116,302.833L196.631,298.45L199.092,293.526L201.553,292.358L204.014,304.676L206.475,301.181L209.288,303.352L211.749,313.647L214.21,300.725L216.671,297.096L219.132,299.321L221.593,293.291L224.054,288.073L226.515,285.985L228.976,287.219L231.437,296.506L233.898,307.221L236.359,303.687L238.82,305.909L241.281,309.737L243.742,307.026L246.203,304.054L248.664,303.86L251.125,311.694L253.586,312.154L256.047,315.073L258.508,309.081L260.969,308.965L263.43,309.258L265.906,305.475L268.367,307.775L270.828,310.221L273.289,305.938L275.75,308.555L278.211,311.538L280.672,306.547L283.133,306.687L285.594,300.203M416.028,163.494L418.489,173.108L420.95,173.115L423.411,152.535L425.872,147.227L428.333,154.617L430.794,158.148L433.255,165.484L435.716,175.334L438.177,178.456L440.624,175.598L443.085,171.1L445.546,179.201L448.007,162.267L450.468,144.889L452.929,151.331L455.39,143.032L457.851,153.448L460.312,162.128L462.773,161.302L465.234,158.66L467.695,162.647L470.156,158.161L472.617,146.416L475.078,134.347L477.539,140.001L480,117.542"
            data-testid="__gg_geom_line"
            fill="none"
            opacity="0.7"
            stroke="#f28e2c"
            stroke-dasharray="2,2"
            stroke-opacity="1"
            stroke-width="1.8"
            style="pointer-events: none;"
          />
          <path
            clip-path="url(#__gg_canvas_test-id)"
            d="M30,375.255L32.461,373.453L34.922,379.275L37.383,374.186L39.844,374.03L42.305,377.844L44.766,378.219L47.227,379.134L49.688,378.901L52.149,375.837L54.596,375.564L57.057,383.977L59.518,393.276L61.979,392.19L64.44,385.905L66.901,385.883L69.362,389.814L71.823,380.537L74.284,376.805L76.745,376.499L79.206,374.403L81.667,373.967L84.128,371.889L86.589,371.283L89.05,365.851L91.511,369.34L94.323,368.002L96.784,363.211L99.245,362.549L101.706,380.685L104.167,380.623L106.628,376.827L109.089,381.566L111.551,382.583L114.012,379.906L116.473,388.442L118.934,389.103L121.395,386.47L123.856,384.877L126.317,390.962L128.778,394.054L131.239,393.172L133.7,395.403L136.161,394.93L138.636,397.112L141.097,399.373L143.91,406.188L146.371,401.194L148.832,402.988L151.293,399.254L153.754,410L156.215,405.361L158.676,403.224L161.137,399.957L163.598,396.473L166.059,397.048L168.52,387.723L170.981,386.818L173.442,389.515L175.903,389.856L178.364,389.638L180.825,385.55L183.272,387.572L185.733,388.488L188.194,387.175L190.655,382.077L193.116,380.188L196.631,378.921L199.092,371.47L201.553,371.973L204.014,378.865L206.475,378.206L209.288,377.318L211.749,386.707L214.21,380.786L216.671,374.994L219.132,374.788L221.593,371.366L224.054,369.015L226.515,366.429L228.976,367.297L231.437,370.267L233.898,377.262L236.359,375.062L238.82,377.652L241.281,379.053L243.742,378.445L246.203,376.335L248.664,375.269L251.125,379.065L253.586,382.082L256.047,380.999L258.508,374.778L260.969,378.435L263.43,374.627L265.906,371.831L268.367,371.747L270.828,369.041L273.289,369.237L275.75,369.32L278.211,368.176L280.672,369.56L283.133,365.805L285.594,365.722M416.028,329.207L418.489,340.289L420.95,334.709L423.411,323.104L425.872,331.445L428.333,330.124L430.794,327.606L433.255,332.128L435.716,335.947L438.177,332.192L440.624,324.647L443.085,318.323L445.546,319.789L448.007,309.998L450.468,308.053L452.929,312.005L455.39,311.838L457.851,303.632L460.312,310.196L462.773,308.293L465.234,298.401L467.695,297.657L470.156,295.133L472.617,293.43L475.078,292.165L477.539,282.949L480,284.536"
            data-testid="__gg_geom_line"
            fill="none"
            opacity="0.7"
            stroke="#59a14f"
            stroke-dasharray="5,4"
            stroke-opacity="1"
            stroke-width="1.8"
            style="pointer-events: none;"
          />
          <path
            clip-path="url(#__gg_canvas_test-id)"
            d="M30,333.102L32.461,330.365L34.922,326.372L37.383,321.987L39.844,321.094L42.305,337.605L44.766,334.731L47.227,329.066L49.688,329.966L52.149,329.298L54.596,323.876L57.057,331.85L59.518,343.593L61.979,340.864L64.44,341.567L66.901,334.565L69.362,341.482L71.823,341.047L74.284,333.113L76.745,333.248L79.206,333.53L81.667,335.146L84.128,325.758L86.589,326.042L89.05,321.279L91.511,330.229L94.323,327.165L96.784,319.102L99.245,318.69L101.706,307.614L104.167,313.356L106.628,310.232L109.089,316.032L111.551,316.183L114.012,311.59L116.473,320.803L118.934,320.273L121.395,318.703L123.856,317.645L126.317,321.181L128.778,333.283L131.239,332.105L133.7,331.176L136.161,334.655L138.636,332.968L141.097,335.375L143.91,340.931L146.371,331.331L148.832,339.203L151.293,338.452L153.754,346.965L156.215,339.135L158.676,334.54L161.137,336.38L163.598,330.79L166.059,331.78L168.52,329.171L170.981,331.305L173.442,328.776L175.903,329.223L178.364,325.057L180.825,324.877L183.272,319.144L185.733,316.283L188.194,320.661L190.655,316.154L193.116,314.696L196.631,310.618L199.092,305.355L201.553,318.693L204.014,326.485L206.475,325.559L209.288,326.197L211.749,337.214L214.21,333.727L216.671,330.347L219.132,332.69L221.593,329.35L224.054,327.506L226.515,323.601L228.976,324.748L231.437,314.04L233.898,321.528L236.359,317.821L238.82,319.799L241.281,321.814L243.742,321.739L246.203,316.636L248.664,313.496L251.125,314.905L253.586,317.346L256.047,319.505L258.508,312.221L260.969,312.546L263.43,309.871L265.906,305.903L268.367,304.989L270.828,302.741L273.289,302.998L275.75,305.464L278.211,298.8L280.672,297.389L283.133,298.949L285.594,300.185M416.028,250.253L418.489,249.509L420.95,243.655L423.411,227.365L425.872,226.011L428.333,205.433L430.794,200.37L433.255,207.102L435.716,206.445L438.177,209.497L440.624,204.245L443.085,209.463L445.546,209.123L448.007,188.127L450.468,182.544L452.929,179.5L455.39,177.732L457.851,171.551L460.312,177.516L462.773,178.215L465.234,164.363L467.695,161.643L470.156,154.688L472.617,149.73L475.078,147.196L477.539,149.768L480,139.927"
            data-testid="__gg_geom_line"
            fill="none"
            opacity="0.7"
            stroke="#e15759"
            stroke-dasharray="2,8,2"
            stroke-opacity="1"
            stroke-width="1.8"
            style="pointer-events: none;"
          />
          <path
            clip-path="url(#__gg_canvas_test-id)"
            d="M30,350.078L32.461,347.862L34.922,344.364L37.383,341.831L39.844,337.119L42.305,345.255L44.766,343.447L47.227,342.422L49.688,338.987L52.149,338.852L54.596,338.867L57.057,340.931L59.518,345.586L61.979,341.334L64.44,342.041L66.901,335.149L69.362,341.486L71.823,339.682L74.284,334.526L76.745,334.21L79.206,331.94L81.667,331.504L84.128,326.182L86.589,328.648L89.05,327.115L91.511,333.624L94.323,330.408L96.784,323.753L99.245,323.438L101.706,315.597L104.167,318.861L106.628,315.71L109.089,318.756L111.551,318.876L114.012,312.289L116.473,317.105L118.934,310.849L121.395,309.858L123.856,308.39L126.317,310.769L128.778,321.107L131.239,317.215L133.7,317.596L136.161,321.171L138.636,312.414L141.097,319.128L143.91,325.451L146.371,313.706L148.832,322.823L151.293,321.005L153.754,332.721L156.215,329.477L158.676,327.028L161.137,325.72L163.598,318.339L166.059,319.377L168.52,325.967L170.981,321.629L173.442,317.801L175.903,313.673L178.364,311.331L180.825,314.363L183.272,306.257L185.733,304.545L188.194,303.209L190.655,300.428L193.116,298.838L196.631,294.7L199.092,285.689L201.553,288.118L204.014,295.315L206.475,291.012L209.288,291.102L211.749,295.6L214.21,282.195L216.671,277.607L219.132,280.201L221.593,276.008L224.054,276.187L226.515,275.26L228.976,271.955L231.437,270.578L233.898,279.034L236.359,273.193L238.82,275.195L241.281,277.466L243.742,277.018L246.203,276.958L248.664,275.001L251.125,275.016L253.586,275.517L256.047,275.979L258.508,267.088L260.969,276.701L263.43,267.058L265.906,264.625L268.367,260.729L270.828,255.773L273.289,253.325L275.75,257.385L278.211,254.669L280.672,249.355L283.133,245.339L285.594,245.411M416.028,158.532L418.489,162.917L420.95,160.687L423.411,137.398L425.872,126.802L428.333,120.515L430.794,120.619L433.255,136.011L435.716,135.125L438.177,135.258L440.624,129.458L443.085,129.65L445.546,138.106L448.007,114.878L450.468,99.208L452.929,99.547L455.39,94.202L457.851,115.099L460.312,117.398L462.773,122.04L465.234,109.307L467.695,115.674L470.156,108.055L472.617,99.522L475.078,88.985L477.539,80.305L480,71.08"
            data-testid="__gg_geom_line"
            fill="none"
            opacity="0.7"
            stroke="#76b7b2"
            stroke-dasharray="15,4"
            stroke-opacity="1"
            stroke-width="1.8"
            style="pointer-events: none;"
          />
        </g>
        <g>
          <clippath
            id="__gg_canvas_test-id"
          >
            <rect
              fill="transparent"
              height="404"
              width="454"
              x="28"
              y="8"
            />
          </clippath>
          <rect
            data-testid="__gg_event_area"
            fill="transparent"
            height="402"
            width="454"
            x="28"
            y="8"
          />
        </g>
        <g
          class="__gg-tooltip-test-id"
          style="transform: translateX(99.24541814512192px);"
        >
          <line
            data-testid="__gg_geom_line_marker"
            stroke="#888"
            stroke-dasharray="2"
            stroke-width="1.5"
            style="pointer-events: none;"
            y1="410"
            y2="10"
          />
          <g
            style="pointer-events: none;"
          >
            <circle
              cy="298.4355485516085"
              fill="#4e79a7"
              fill-opacity="0.5"
              r="7.5"
            />
            <circle
              cy="298.4355485516085"
              data-testid="__gg_geom_line_marker_point"
              fill="#4e79a7"
              fill-opacity="1"
              r="3.5"
              stroke="#fff"
              stroke-opacity="0.7"
              stroke-width="1.09375"
            />
          </g>
          <g
            style="pointer-events: none;"
          >
            <circle
              cy="307.2402565045668"
              fill="#f28e2c"
              fill-opacity="0.5"
              r="7.5"
            />
            <circle
              cy="307.2402565045668"
              data-testid="__gg_geom_line_marker_point"
              fill="#f28e2c"
              fill-opacity="1"
              r="3.5"
              stroke="#fff"
              stroke-opacity="0.7"
              stroke-width="1.09375"
            />
          </g>
          <g
            style="pointer-events: none;"
          >
            <circle
              cy="362.5494404060723"
              fill="#59a14f"
              fill-opacity="0.5"
              r="7.5"
            />
            <circle
              cy="362.5494404060723"
              data-testid="__gg_geom_line_marker_point"
              fill="#59a14f"
              fill-opacity="1"
              r="3.5"
              stroke="#fff"
              stroke-opacity="0.7"
              stroke-width="1.09375"
            />
          </g>
          <g
            style="pointer-events: none;"
          >
            <circle
              cy="318.69030309300814"
              fill="#e15759"
              fill-opacity="0.5"
              r="7.5"
            />
            <circle
              cy="318.69030309300814"
              data-testid="__gg_geom_line_marker_point"
              fill="#e15759"
              fill-opacity="1"
              r="3.5"
              stroke="#fff"
              stroke-opacity="0.7"
              stroke-width="1.09375"
            />
          </g>
          <g
            style="pointer-events: none;"
          >
            <circle
              cy="323.43772241120257"
              fill="#76b7b2"
              fill-opacity="0.5"
              r="7.5"
            />
            <circle
              cy="323.43772241120257"
              data-testid="__gg_geom_line_marker_point"
              fill="#76b7b2"
              fill-opacity="1"
              r="3.5"
              stroke="#fff"
              stroke-opacity="0.7"
              stroke-width="1.09375"
            />
          </g>
        </g>
        <g
          id="__gg-brush-exclusion-test-id"
        />
      </svg>
      <div
        style="position: relative;"
      >
        <div
          data-testid="__gg_zoom_out_button"
          id="__gg-zoom-out-button-test-id"
        />
      </div>
      <div
        style="position: relative;"
      >
        <div
          data-testid="__gg_x_tooltip"
          id="__gg-tooltip-x-test-id"
        />
        <div
          data-testid="__gg_y_tooltip"
          id="__gg-tooltip-y-test-id"
        >
          <div
            style="font-family: system-ui, BlinkMacSystemFont, Segoe UI,
                Roboto, Oxygen-Sans, Ubuntu, Cantarell,
                Helvetica Neue, sans-serif; left: 107.24541814512192px; pointer-events: none; position: absolute; white-space: nowrap; top: -132.92934580670834px;"
          >
            <div
              style="font-size: 12px; padding: 4px 6px 4px 6px; color: rgb(17, 17, 17); background: rgba(254, 254, 254, 0.914); border: 1px solid #eee; border-radius: 2px; box-shadow: rgba(0, 0, 0, 0.5) 0px 1px 4px;"
            >
              <div
                style="margin-top: 2px; margin-bottom: 6px; color: rgb(85, 85, 85);"
              >
                Jul 18, 2018
              </div>
              <div>
                <div
                  style="margin-top: 3px; margin-bottom: 2px; display: flex; align-items: center;"
                >
                  <svg
                    height="8"
                    width="18"
                  >
                    <line
                      stroke="#4e79a7"
                      stroke-dasharray="0"
                      stroke-opacity="1"
                      stroke-width="1.8"
                      x1="0"
                      x2="18"
                      y1="4"
                      y2="4"
                    />
                  </svg>
                  <div
                    style="display: flex; align-items: flex-end; margin-left: 4px;"
                  >
                    <div
                      style="margin-right: 5px;"
                    >
                      <span>
                        AAPL 
                      </span>
                    </div>
                  </div>
                  <div
                    style="font-weight: 500; font-size: 13px;"
                  >
                    929.26
                  </div>
                </div>
              </div>
              <div>
                <div
                  style="margin-top: 3px; margin-bottom: 2px; display: flex; align-items: center;"
                >
                  <svg
                    height="8"
                    width="18"
                  >
                    <line
                      stroke="#f28e2c"
                      stroke-dasharray="2,2"
                      stroke-opacity="1"
                      stroke-width="1.8"
                      x1="0"
                      x2="18"
                      y1="4"
                      y2="4"
                    />
                  </svg>
                  <div
                    style="display: flex; align-items: flex-end; margin-left: 4px;"
                  >
                    <div
                      style="margin-right: 5px;"
                    >
                      <span>
                        AMZN 
                      </span>
                    </div>
                  </div>
                  <div
                    style="font-weight: 500; font-size: 13px;"
                  >
                    884.26
                  </div>
                </div>
              </div>
              <div>
                <div
                  style="margin-top: 3px; margin-bottom: 2px; display: flex; align-items: center;"
                >
                  <svg
                    height="8"
                    width="18"
                  >
                    <line
                      stroke="#59a14f"
                      stroke-dasharray="5,4"
                      stroke-opacity="1"
                      stroke-width="1.8"
                      x1="0"
                      x2="18"
                      y1="4"
                      y2="4"
                    />
                  </svg>
                  <div
                    style="display: flex; align-items: flex-end; margin-left: 4px;"
                  >
                    <div
                      style="margin-right: 5px;"
                    >
                      <span>
                        META 
                      </span>
                    </div>
                  </div>
                  <div
                    style="font-weight: 500; font-size: 13px;"
                  >
                    601.59
                  </div>
                </div>
              </div>
              <div>
                <div
                  style="margin-top: 3px; margin-bottom: 2px; display: flex; align-items: center;"
                >
                  <svg
                    height="8"
                    width="18"
                  >
                    <line
                      stroke="#e15759"
                      stroke-dasharray="2,8,2"
                      stroke-opacity="1"
                      stroke-width="1.8"
                      x1="0"
                      x2="18"
                      y1="4"
                      y2="4"
                    />
                  </svg>
                  <div
                    style="display: flex; align-items: flex-end; margin-left: 4px;"
                  >
                    <div
                      style="margin-right: 5px;"
                    >
                      <span>
                        GOOG 
                      </span>
                    </div>
                  </div>
                  <div
                    style="font-weight: 500; font-size: 13px;"
                  >
                    825.74
                  </div>
                </div>
              </div>
              <div>
                <div
                  style="margin-top: 3px; margin-bottom: 2px; display: flex; align-items: center;"
                >
                  <svg
                    height="8"
                    width="18"
                  >
                    <line
                      stroke="#76b7b2"
                      stroke-dasharray="15,4"
                      stroke-opacity="1"
                      stroke-width="1.8"
                      x1="0"
                      x2="18"
                      y1="4"
                      y2="4"
                    />
                  </svg>
                  <div
                    style="display: flex; align-items: flex-end; margin-left: 4px;"
                  >
                    <div
                      style="margin-right: 5px;"
                    >
                      <span>
                        MSFT 
                      </span>
                    </div>
                  </div>
                  <div
                    style="font-weight: 500; font-size: 13px;"
                  >
                    801.48
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div
          style="margin-top: 12px; font-family: system-ui, BlinkMacSystemFont, Segoe UI,
                Roboto, Oxygen-Sans, Ubuntu, Cantarell,
                Helvetica Neue, sans-serif;"
        >
          Stonks
          <div
            data-testid="__gg_geom_line_legend"
            style="margin-top: 8px; display: flex; flex-direction: row; flex-wrap: wrap; align-items: center;"
          >
            <div
              style="display: flex; align-items: center; margin-bottom: 6px;"
            >
              <div
                role="button"
                style="cursor: pointer; margin-right: 12px; font-size: 12px; opacity: 1; transition: opacity 200ms; display: flex; align-items: center;"
                tabindex="0"
              >
                <div
                  style="display: flex; align-items: center; justify-content: center;"
                >
                  <svg
                    height="8"
                    width="18"
                  >
                    <line
                      stroke="#4e79a7"
                      stroke-dasharray="0"
                      stroke-opacity="1"
                      stroke-width="1.8"
                      style="transition: stroke-opacity 500ms;"
                      x1="0"
                      x2="18"
                      y1="4"
                      y2="4"
                    />
                  </svg>
                </div>
                <div
                  style="margin-left: 4px; font-size: 12px;"
                >
                  AAPL
                </div>
              </div>
            </div>
            <div
              style="display: flex; align-items: center; margin-bottom: 6px;"
            >
              <div
                role="button"
                style="cursor: pointer; margin-right: 12px; font-size: 12px; opacity: 1; transition: opacity 200ms; display: flex; align-items: center;"
                tabindex="0"
              >
                <div
                  style="display: flex; align-items: center; justify-content: center;"
                >
                  <svg
                    height="8"
                    width="18"
                  >
                    <line
                      stroke="#f28e2c"
                      stroke-dasharray="2,2"
                      stroke-opacity="1"
                      stroke-width="1.8"
                      style="transition: stroke-opacity 500ms;"
                      x1="0"
                      x2="18"
                      y1="4"
                      y2="4"
                    />
                  </svg>
                </div>
                <div
                  style="margin-left: 4px; font-size: 12px;"
                >
                  AMZN
                </div>
              </div>
            </div>
            <div
              style="display: flex; align-items: center; margin-bottom: 6px;"
            >
              <div
                role="button"
                style="cursor: pointer; margin-right: 12px; font-size: 12px; opacity: 1; transition: opacity 200ms; display: flex; align-items: center;"
                tabindex="0"
              >
                <div
                  style="display: flex; align-items: center; justify-content: center;"
                >
                  <svg
                    height="8"
                    width="18"
                  >
                    <line
                      stroke="#59a14f"
                      stroke-dasharray="5,4"
                      stroke-opacity="1"
                      stroke-width="1.8"
                      style="transition: stroke-opacity 500ms;"
                      x1="0"
                      x2="18"
                      y1="4"
                      y2="4"
                    />
                  </svg>
                </div>
                <div
                  style="margin-left: 4px; font-size: 12px;"
                >
                  META
                </div>
              </div>
            </div>
            <div
              style="display: flex; align-items: center; margin-bottom: 6px;"
            >
              <div
                role="button"
                style="cursor: pointer; margin-right: 12px; font-size: 12px; opacity: 1; transition: opacity 200ms; display: flex; align-items: center;"
                tabindex="0"
              >
                <div
                  style="display: flex; align-items: center; justify-content: center;"
                >
                  <svg
                    height="8"
                    width="18"
                  >
                    <line
                      stroke="#e15759"
                      stroke-dasharray="2,8,2"
                      stroke-opacity="1"
                      stroke-width="1.8"
                      style="transition: stroke-opacity 500ms;"
                      x1="0"
                      x2="18"
                      y1="4"
                      y2="4"
                    />
                  </svg>
                </div>
                <div
                  style="margin-left: 4px; font-size: 12px;"
                >
                  GOOG
                </div>
              </div>
            </div>
            <div
              style="display: flex; align-items: center; margin-bottom: 6px;"
            >
              <div
                role="button"
                style="cursor: pointer; margin-right: 2px; font-size: 12px; opacity: 1; transition: opacity 200ms; display: flex; align-items: center;"
                tabindex="0"
              >
                <div
                  style="display: flex; align-items: center; justify-content: center;"
                >
                  <svg
                    height="8"
                    width="18"
                  >
                    <line
                      stroke="#76b7b2"
                      stroke-dasharray="15,4"
                      stroke-opacity="1"
                      stroke-width="1.8"
                      style="transition: stroke-opacity 500ms;"
                      x1="0"
                      x2="18"
                      y1="4"
                      y2="4"
                    />
                  </svg>
                </div>
                <div
                  style="margin-left: 4px; font-size: 12px;"
                >
                  MSFT
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
